# kalgan-confg

./: CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs  parameters.rs
tests/: settings.yaml
