[package]
name = "config"
version = "0.9.0"
edition = "2018"
description = "Collection of functions to retrieve data and settings parameters defined in yaml files used by Kalgan Framework."
homepage = "https://kalgan.eduardocasas.com"
repository = "https://github.com/eduardocasas/kalgan-config"
license = "MIT OR Apache-2.0"

[dependencies]
log = "0.4.14"
serde = "1.0.130"
serde_yaml = "0.8.21"